--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "./source-map-support.js",
   "scripts": {
     "build": "node build.js",
+    "build:async": "browserify -t babelify -s swSourceMap source-map-support.sw.js -o sw-source-map-support.js",
     "serve-tests": "http-server -p 1336",
     "prepublish": "npm run build",
     "test": "mocha"
   },
   "dependencies": {
+    "babel-runtime": "^6.20.0",
     "source-map": "^0.5.3"
   },
   "devDependencies": {
-    "browserify": "3.44.2",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "13.1.1",
     "coffee-script": "1.7.1",
     "http-server": "^0.8.5",
     "mocha": "1.18.2"
